// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AppBar > renders 1`] = `
<div>
  <div
    class="_bar_221541"
  >
    <header>
      <button
        aria-labelledby="_r_0_"
        class="_icon-button_1215g_8 _primaryButton_221541"
        data-kind="primary"
        role="button"
        style="--cpd-icon-button-size: 24px;"
        tabindex="0"
      >
        <div
          class="_indicator-icon_147l5_17"
          style="--cpd-icon-button-size: 100%;"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 256 256"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M152,96V48a8,8,0,0,1,16,0V88h40a8,8,0,0,1,0,16H160A8,8,0,0,1,152,96ZM96,152H48a8,8,0,0,0,0,16H88v40a8,8,0,0,0,16,0V160A8,8,0,0,0,96,152Zm112,0H160a8,8,0,0,0-8,8v48a8,8,0,0,0,16,0V168h40a8,8,0,0,0,0-16ZM96,40a8,8,0,0,0-8,8V88H48a8,8,0,0,0,0,16H96a8,8,0,0,0,8-8V48A8,8,0,0,0,96,40Z"
            />
          </svg>
        </div>
      </button>
      <div
        class="_secondaryButton_221541"
      />
    </header>
  </div>
  <p>
    This is the content.
  </p>
</div>
`;

exports[`AppBar > renders with title and subtitle 1`] = `
<div>
  <div
    class="_bar_221541"
  >
    <header>
      <button
        aria-labelledby="_r_6_"
        class="_icon-button_1215g_8 _primaryButton_221541"
        data-kind="primary"
        role="button"
        style="--cpd-icon-button-size: 24px;"
        tabindex="0"
      >
        <div
          class="_indicator-icon_147l5_17"
          style="--cpd-icon-button-size: 100%;"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 256 256"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M152,96V48a8,8,0,0,1,16,0V88h40a8,8,0,0,1,0,16H160A8,8,0,0,1,152,96ZM96,152H48a8,8,0,0,0,0,16H88v40a8,8,0,0,0,16,0V160A8,8,0,0,0,96,152Zm112,0H160a8,8,0,0,0-8,8v48a8,8,0,0,0,16,0V168h40a8,8,0,0,0,0-16ZM96,40a8,8,0,0,0-8,8V88H48a8,8,0,0,0,0,16H96a8,8,0,0,0,8-8V48A8,8,0,0,0,96,40Z"
            />
          </svg>
        </div>
      </button>
      <h1
        class="_typography_6v6n8_153 _font-body-lg-medium_6v6n8_79 _title_221541"
      >
        Title
      </h1>
      <span
        class="_typography_6v6n8_153 _font-body-lg-regular_6v6n8_69 _subtitle_221541"
      >
        Subtitle
      </span>
      <div
        class="_secondaryButton_221541"
      />
    </header>
  </div>
  <p>
    This is the content.
  </p>
</div>
`;
